add entity (commented out), controller, service, fix api.yaml
